crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_content.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: snapshot_attrs(&api.content_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Suggestions",
            ),
        ),
        (
            Id,
            String(
                "ac-content",
            ),
        ),
        (
            Role,
            String(
                "listbox",
            ),
        ),
    ],
    styles: [],
}
