crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_input_disabled.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: snapshot_attrs(&disabled_api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Aria(
                AutoComplete,
            ),
            String(
                "list",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "listbox",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Search",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "ac-content",
            ),
        ),
        (
            Id,
            String(
                "ac-input",
            ),
        ),
        (
            Role,
            String(
                "combobox",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "Alpha",
            ),
        ),
    ],
    styles: [],
}
