crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_input_highlighted.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Aria(
                ActiveDescendant,
            ),
            String(
                "ac-item-bravo",
            ),
        ),
        (
            Aria(
                AutoComplete,
            ),
            String(
                "list",
            ),
        ),
        (
            Aria(
                Expanded,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                HasPopup,
            ),
            String(
                "listbox",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Search",
            ),
        ),
        (
            Aria(
                Controls,
            ),
            String(
                "ac-content",
            ),
        ),
        (
            Id,
            String(
                "ac-input",
            ),
        ),
        (
            Role,
            String(
                "combobox",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "br",
            ),
        ),
    ],
    styles: [],
}
