crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_item_highlighted.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: "snapshot_attrs(&api.item_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-highlighted",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "unselected",
            ),
        ),
        (
            Data(
                "ars-value",
            ),
            String(
                "Bravo",
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "false",
            ),
        ),
        (
            Id,
            String(
                "ac-item-bravo",
            ),
        ),
        (
            Role,
            String(
                "option",
            ),
        ),
    ],
    styles: [],
}
