crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_item_text.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: "snapshot_attrs(&api.item_text_attrs(&key(\"bravo\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "item-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Id,
            String(
                "ac-item-bravo-text",
            ),
        ),
    ],
    styles: [],
}
