crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_live_region.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: snapshot_attrs(&api.live_region_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "live-region",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Aria(
                Atomic,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "ac-live-region",
            ),
        ),
    ],
    styles: [],
}
