crates/ars-components/src/selection/autocomplete/snapshots/ars_components__selection__autocomplete__tests__autocomplete_root_loading.snap
---
source: crates/ars-components/src/selection/autocomplete/mod.rs
expression: snapshot_attrs(&loading_api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-loading",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "autocomplete",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "loading",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "ac",
            ),
        ),
    ],
    styles: [],
}
